WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
183810
Windows 64-bit build fix after
r229767
https://bugs.webkit.org/show_bug.cgi?id=183810
Summary
Windows 64-bit build fix after r229767
Christopher Reid
Reported
2018-03-20 23:20:52 PDT
c:\git\webkit\source\javascriptcore\assembler\MacroAssemblerX86_64.h(180): error C2661: 'JSC::X86Assembler::call': no overloaded function takes 2 arguments c:\git\webkit\source\javascriptcore\assembler\MacroAssemblerX86_64.h(180): error C2440: '<function-style-cast>': cannot convert from 'JSC::AbstractMacroAssembler<JSC::Assembler>::Call::Flags' to 'JSC::AbstractMacroAssembler<JSC::Assembler>::Call'
Attachments
Patch
(1.37 KB, patch)
2018-03-20 23:31 PDT
,
Christopher Reid
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Christopher Reid
Comment 1
2018-03-20 23:31:45 PDT
Created
attachment 336182
[details]
Patch
Mark Lam
Comment 2
2018-03-20 23:37:41 PDT
Comment on
attachment 336182
[details]
Patch The tag argument comes from the incoming PtrTag, which I neglected to name. Can you please apply this fix?
Christopher Reid
Comment 3
2018-03-20 23:57:06 PDT
(In reply to Mark Lam from
comment #2
)
> Comment on
attachment 336182
[details]
> Patch > > The tag argument comes from the incoming PtrTag, which I neglected to name. > Can you please apply this fix?
I tried doing that initially but ran into that `'JSC::X86Assembler::call': no overloaded function takes 2 arguments` error. Do you know which function it's supposed to be using?
Mark Lam
Comment 4
2018-03-20 23:59:31 PDT
(In reply to Christopher Reid from
comment #3
)
> (In reply to Mark Lam from
comment #2
) > > Comment on
attachment 336182
[details]
> > Patch > > > > The tag argument comes from the incoming PtrTag, which I neglected to name. > > Can you please apply this fix? > > I tried doing that initially but ran into that `'JSC::X86Assembler::call': > no overloaded function takes 2 arguments` error. Do you know which function > it's supposed to be using?
OK, nevermind then. Let's just go with your solution for now.
Mark Lam
Comment 5
2018-03-20 23:59:47 PDT
Comment on
attachment 336182
[details]
Patch r=me
WebKit Commit Bot
Comment 6
2018-03-21 00:25:08 PDT
Comment on
attachment 336182
[details]
Patch Clearing flags on attachment: 336182 Committed
r229797
: <
https://trac.webkit.org/changeset/229797
>
WebKit Commit Bot
Comment 7
2018-03-21 00:25:10 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 8
2018-03-21 00:26:24 PDT
<
rdar://problem/38697546
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug