Windows 64-bit build fix after r229767 https://bugs.webkit.org/show_bug.cgi?id=183810

Patch by Christopher Reid <chris.reid@sony.com> on 2018-03-21
Reviewed by Mark Lam.

Removing an extra parameter in the call to m_assember::call.

* assembler/MacroAssemblerX86_64.h:

Canonical link: https://commits.webkit.org/199441@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@229797 268f45cc-cd09-0410-ab3c-d52691b4dbfc